--- a/profile.html
+++ b/profile.html
@@ -83,8 +83,8 @@
         </i>
         <a href="profile.html"></a>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="index.html">Buisnesse Understanding</a></li>
+        <li><a href="Data_understanding.html">Data Understanding</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
