--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           <input type="text" placeholder="Search..."/>
         </i>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="index.html">Buisnesse Understanding</a></li>
+        <li><a href="Data_understanding.html">Data Understanding</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
@@ -94,8 +94,8 @@
     <!-- Konten utama -->
     <main class="content" role="main">
       <div><a href="https://github.com/PramudyaRakaUtomo1/PSD"><img src="github_PNG40.png" width="50px" height="50px" /></a></div>
-      <h1>Home</h1>
-      <p>Proyek Sains Data</p>
+      <h1>Buisnesse Understanding</h1>
+      <p></p>
       </section>
 
       
