--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     <main class="content" role="main">
       <div><a href="https://github.com/PramudyaRakaUtomo1/PSD"><img src="github_PNG40.png" width="50px" height="50px" /></a></div>
       <h1>Buisnesse Understanding</h1>
-      <p>Tujuan bisnis / proyek:
+      <p>Tujuan bisnis / proyek:</br>
 
 Membangun model klasifikasi untuk memprediksi spesies bunga Iris (Iris-setosa, Iris-versicolor, Iris-virginica) berdasarkan ukuran sepal dan petal.
-Manfaat / use-case:
+Manfaat / use-case:</br>
 
 Studi kasus untuk pembelajaran machine learning / validasi pipeline klasifikasi (preprocessing → modeling → evaluasi).
 
@@ -120,4 +120,5 @@ Target realistis untuk baseline: accuracy ≥ 0.90 (tergantung model).</p>
   </div>
 </body>
 </html>
+
 
