--- a/profile.html
+++ b/profile.html
@@ -83,7 +83,7 @@
         </i>
         <a href="profile.html"></a>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="index.html">Buisnesse Understanding</a></li>
+        <li><a href="index.html">Businesses Understanding</a></li>
         <li><a href="Data_understanding.html">Data Understanding</a></li>
         <li><a href="Data_preprocessing"></a>Data Preprocessing</li>
         <li><a href="#"></a></li>
@@ -105,4 +105,5 @@
   </div>
 </body>
 </html>
+
 
