--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <input type="text" placeholder="Search..."/>
         </i>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="index.html">Buisnesse Understanding</a></li>
+        <li><a href="index.html">Businesses Understanding</a></li>
         <li><a href="Data_understanding.html">Data Understanding</a></li>
         <li><a href="Data_preprocessing"></a>Data Preprocessing</li>
         <li><a href="#"></a></li>
@@ -94,7 +94,7 @@
     <!-- Konten utama -->
     <main class="content" role="main">
       <div><a href="https://github.com/PramudyaRakaUtomo1/PSD"><img src="github_PNG40.png" width="50px" height="50px" /></a></div>
-      <h1>Buisnesse Understanding</h1>
+      <h1>Businesses Understanding</h1>
       <p>Tujuan bisnis / proyek:</p>
       
        <ol>
@@ -113,6 +113,7 @@
   </div>
 </body>
 </html>
+
 
 
 
