--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="index.html">Businesses Understanding</a></li>
         <li><a href="Data_understanding.html">Data Understanding</a></li>
-        <li><a href="Data_preprocessing"></a>Data Preprocessing</li>
+        <li><a href="Data_preprocessing">Data Preprocessing</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         
@@ -113,6 +113,7 @@
   </div>
 </body>
 </html>
+
 
 
 
