--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
       <p>Tujuan bisnis / proyek:</p>
       
        <ol>
-        <li>Membangun model klasifikasi untuk memprediksi spesies bunga Iris (Iris-setosa, Iris-versicolor, Iris-virginica) berdasarkan ukuran sepal dan petal.
-          Manfaat / use-case:</li>
+        <li>Membangun model klasifikasi untuk memprediksi data Iris (Iris-setosa, Iris-versicolor, Iris-virginica) berdasarkan ukuran sepal dan petal.</li>
         <li>Studi kasus untuk pembelajaran machine learning / validasi pipeline klasifikasi (preprocessing → modeling → evaluasi).</li>
         <li>Contoh aplikasi: automatisasi identifikasi spesies di penelitian botani atau edukasi.</li)
         <li>Batasan: dataset kecil (150 sampel), fitur numerik sederhana, data sudah “bersih” (lihat bagian Data Understanding).
@@ -113,6 +112,7 @@
   </div>
 </body>
 </html>
+
 
 
 
