--- a/profile.html
+++ b/profile.html
@@ -86,7 +86,7 @@
         <li><a href="index.html">Businesses Understanding</a></li>
         <li><a href="Data_understanding.html">Data Understanding</a></li>
         <li><a href="Data_preprocessing">Data Preprocessing</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="Tugas_Pra_UTS.html">Tugas Pra UTS</a></li>
         <li><a href="#"></a></li>
       </ul>
     </aside>
@@ -105,6 +105,7 @@
   </div>
 </body>
 </html>
+
 
 
 
