--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <li><a href="index.html">Businesses Understanding</a></li>
         <li><a href="Data_understanding.html">Data Understanding</a></li>
         <li><a href="Data_preprocessing">Data Preprocessing</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="Tugas_Pra_UTS.html">Tugas Pra UTS</a></li>
         <li><a href="#"></a></li>
         
       </ul>
@@ -112,6 +112,7 @@
   </div>
 </body>
 </html>
+
 
 
 
