--- a/Tugas_Pra_UTS.html
+++ b/Tugas_Pra_UTS.html
@@ -84,7 +84,7 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="index.html">Buisnesse Understanding</a></li>
         <li><a href="Data_understanding.html">Data Understanding</a></li>
-        <li><a href="Data_preprocessing.html">Data Preprocessin</a>g</li>
+        <li><a href="Data_preprocessing.html">Data Preprocessing</a></li>
         <li><a href="Tugas_Pra_UTS.html">Tugas Pra UTS</a></li>
         <li><a href="#"></a></li>
         
@@ -152,6 +152,7 @@
 </body>
 
 </html>
+
 
 
 
